# SaveTheChildren_Backend

./: .gitignore  docker-compose.yml  init_postgres_vectors.py  inspect_data.py  load_data.py  main.py  nginx.conf  pyproject.toml  requirements.txt.backup  requirements.txt.old.backup  test_geocoding.py  test_pinecone_integration.py
app/: config.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  analytics.py  auth.py  cases.py  chatbot.py  chatbot_sse.py  chatbot_ws.py  data.py  data_loader.py  demographics.py.bak  files.py  geospatial.py  kenya_api.py  monitoring.py  overpass.py  reports.py  scraping.py  search.py  users.py
app/core/: cache.py  exceptions.py  logging.py  security.py
app/db/: client.py  models.py  redis_client.py
app/integrations/: __init__.py  azure_blob.py  document_chunker.py  embedding_service.py  llm_client.py  pinecone_service.py  postgres_vector_service.py  scraper_clients.py
app/services/: analytics_service.py  auth_service.py  case_service.py  chatbot_service.py  data_loader_service.py  file_service.py  geocoding_service.py  geospatial_service.py  kenya_api_service.py  overpass_service.py  report_service.py  report_service.py.removed  scraping_service.py  user_service.py
app/tasks/: scheduler.py
app/utils/: __init__.py  date_filters.py  formatters.py  helpers.py  severity_mapping.py  validators.py
tests/: conftest.py  test_auth.py
